--- a/Docker/05-example-web-application/api-node/Dockerfile
+++ b/Docker/05-example-web-application/api-node/Dockerfile
@@ -1,7 +1,19 @@
 FROM node:19.6-alpine
 
-COPY . .
+WORKDIR /usr/src/app
 
-RUN npm install
+ENV NODE_ENV=production
 
-CMD ["npm","run","dev"]
+COPY package*.json ./
+
+RUN --mount=type=cache,target=/usr/src/app/.npm \
+  npm set cache /usr/src/app/.npm && \
+  npm ci --only=production
+
+USER node
+
+COPY --chown=node:node ./src .
+
+EXPOSE 3000
+
+CMD ["node","index.js"]
